# tauri-plugin-ios-webview-insets

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
ios/: Package.swift
ios/Sources/: IosWebviewInsetsPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs
