[package]
name = "tauri-plugin-ios-webview-insets"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Tauri v2 helper crate for iOS webview integration."
readme = "README.md"
keywords = ["tauri", "tauri-plugin", "ios", "wkwebview", "webview"]
categories = ["gui", "api-bindings"]
license = "MIT"
links = "tauri-plugin-ios-webview-insets"
authors = ["Ricardo Escaran"]
repository = "https://github.com/riczescaran/tauri-plugin-ios-webview-insets"
documentation = "https://docs.rs/tauri-plugin-ios-webview-insets"

[lib]
name = "tauri_plugin_ios_webview_insets"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies.tauri]
version = "2"
features = ["wry"]
default-features = false

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
